test: refactor SrmReceiverTest to use @EmbeddedKafka and @KafkaListener, remove EmbeddedKafkaHolder usage